# movie_rating_service

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: config.py  dependencies.py  exceptions.py  main.py
app/admin/: admin.py  views.py
app/db/: crud.py  models.py  schemas.py
app/routers/: movies.py  reviews.py  users.py
tests/db/: conftest.py  test_crud.py
tests/routers/: conftest.py  test_views.py
